--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@ project/plugins/project/
 
 # Scala-IDE specific
 .scala_dependencies
+
+.DS_Store
+
+.gradle
+
+atlassian-ide-plugin.xml
+
+build
