--- a/kafka-http.yml
+++ b/kafka-http.yml
@@ -1,10 +1,22 @@
+# Server-specific options.
+server:
+  applicationConnectors:
+    - type: http
+      port: 9080
+      bindHost: 127.0.0.1
+  adminConnectors:
+    - type: http
+      port: 9081
+      bindHost: 127.0.0.1
+
+
 producer:
-  metadataBrokerList: "192.168.22.10:9092"
+  metadataBrokerList: "127.0.0.1:9092"
   serializerClass: "kafka.serializer.StringEncoder"
   producerType: "sync"
 
 consumer:
-  zookeeperConnect: "192.168.22.5:2181"
+  zookeeperConnect: "127.0.0.1:2181"
   groupId: "group"
   consumerTimeoutMs: 500
 
